--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -1,23 +1,11 @@
 :root {
   --color-white: #fff;
 
-  --color-dark: #1f2432;
-  --color-desc: #2c3242;
-  --color-article-price: #797b86;
-  --link-hover: #45474c;
+  --color-dark: #000;
+  --color-dark-alt: #262626;
+  --color-border: #4D4D4D;
 
-  --color-breadcrumb: #33374e;
-
-  --color-blue: #0069b4;
-  --color-gray: #f6f8fa;
-  --color-gray-hover: #c3c0c0;
-
-  --color-button: #90a2b5;
-
-  --color-border: 1px solid var(--color-blue);
-  --border-gray: 1px solid #c4c4c4;
-
-  --border-radius-button: 4px;
+  --border-radius: 12px;
 
   --transition-base: all 0.2s ease-in;
 
