--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -1,13 +1,19 @@
 :root {
   --color-white: #fff;
+  --color-red:  #FA7272;
 
   --color-dark: #000;
   --color-dark-alt: #262626;
+  --color-text-dark: #2D2D2D;
+  --color-bg: #1d1d1d;
   --color-border: #4D4D4D;
 
-  --border-radius: 12px;
+  --border-radius-block: 12px;
+  --border-radius-btn: 8px;
 
   --transition-base: all 0.2s ease-in;
+
+  --border: 1px solid var(--color-border);
 
   --font-family-base: "Inter", sans-serif;
   --font-family-add: "SF Pro Display", sans-serif;
