feat: updated vars

--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -1,12 +1,12 @@
 :root {
   --color-white: #fff;
-  --color-red:  #FA7272;
+  --color-red: #fa7272;
 
   --color-dark: #000;
   --color-dark-alt: #262626;
-  --color-text-dark: #2D2D2D;
+  --color-text-dark: #2d2d2d;
   --color-bg: #1d1d1d;
-  --color-border: #4D4D4D;
+  --color-border: #4d4d4d;
 
   --border-radius-block: 12px;
   --border-radius-btn: 8px;
