feat: add mode styles

--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -24,4 +24,7 @@ a {
   max-width: 815px;
   padding-inline: 15px;
   margin-inline: auto;
+  height: 100vh;
+  padding-block: 32px;
+  background-color: rgba(218, 165, 32, 0.414);
 }
