--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -29,3 +29,19 @@ a {
   margin-inline: auto;
   padding-block: 32px;
 }
+
+.app {
+  display: grid;
+  grid-template-columns: 236px 1fr;
+  grid-template-rows: 500px 72px;
+  gap: 24px;
+  grid-template-areas:
+    "sidebar main"
+    "footer footer";
+}
+
+main {
+  grid-area: main;
+  @include block;
+  position: relative;
+}
