--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -66,6 +66,17 @@ p {
   margin-block: 0;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+
+img {
+  margin: 0;
+}
+
 /**
    Внешний отступ вниз для параграфа без атрибута class,
    который расположен не последним среди своих соседних элементов
