--- a/src/assets/styles/blocks/_cell.scss
+++ b/src/assets/styles/blocks/_cell.scss
@@ -1,6 +1,61 @@
-.cell-list {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    border-radius: var(--border-radius-block);
-  }
-  
+.products {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  border-radius: var(--border-radius-block);
+  overflow: hidden;
+}
+
+.cell {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  border: var(--border);
+}
+
+.cell__count {
+  display: inline-block;
+  color: var(--color-white);
+  opacity: 0.4;
+  font-size: 10px;
+  font-weight: 500;
+  border: var(--border);
+  border-top-left-radius: 8px;
+  padding: 2px 4px;
+}
+
+.cell__count_position {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.cell_green {
+  @include color;
+  background-color: #7faa65;
+}
+
+.cell_green-top {
+  @include color-top;
+  background-color: rgba(184, 217, 152, 0.035);
+}
+
+.cell_peru {
+  @include color();
+  background-color: #aa9765;
+}
+
+.cell_peru-top {
+  @include color-top;
+  background-color: rgba(217, 187, 152, 0.035);
+}
+
+.cell_blue {
+  @include color;
+  background-color: #656caa;
+}
+
+.cell_blue-top {
+  @include color-top;
+  background-color: rgba(116, 128, 237, 0.035);
+}
