--- a/src/assets/styles/blocks/_cell.scss
+++ b/src/assets/styles/blocks/_cell.scss
@@ -11,7 +11,11 @@
   width: 100%;
   height: 100px;
   border: var(--border);
+  &:hover {
+    cursor: pointer;
+  }
 }
+
 
 .cell__count {
   display: inline-block;
