--- a/src/assets/styles/blocks/_modal.scss
+++ b/src/assets/styles/blocks/_modal.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
 
-  animation-name: shoeModalRight;
+  animation-name: showModalRight;
   animation-duration: 0.3s;
   animation-timing-function: ease-in;
   animation-fill-mode: forwards;
@@ -48,7 +48,7 @@
   padding-block: 11px;
 }
 
-@keyframes shoeModalRight {
+@keyframes showModalRight {
   from {
     transform: translateX(100%);
   }
