--- a/src/assets/styles/blocks/_modal.scss
+++ b/src/assets/styles/blocks/_modal.scss
@@ -20,6 +20,7 @@
   padding-inline: 15px;
 }
 .modal__top {
+  position: relative;
   padding-top: 50px;
   padding-bottom: 30px;
   border-bottom: var(--border);
