feat: add reset style

--- a/src/assets/styles/blocks/_input.scss
+++ b/src/assets/styles/blocks/_input.scss
@@ -1,15 +1,17 @@
 .input {
-    background-color: var(--color-dark-alt);
-    border-radius: var(--border-radius-input);
-    border: var(--border);
-    padding-block: 11px 12px;
-    padding-left: 12px;
-    color: var(--color-white);
-    outline: none;
-  
-    &::placeholder {
-      font-size: 14px;
-      font-weight: 500;
-      opacity: 0.4;
-    }
+  all: revert;
+  display: block;
+  background-color: var(--color-dark-alt);
+  border-radius: var(--border-radius-input);
+  border: var(--border);
+  padding-block: 11px 12px;
+  padding-left: 12px;
+  color: var(--color-white);
+  outline: none;
+
+  &::placeholder {
+    font-size: 14px;
+    font-weight: 500;
+    opacity: 0.4;
   }
+}
