--- a/src/assets/styles/blocks/_modal.scss
+++ b/src/assets/styles/blocks/_modal.scss
@@ -6,18 +6,20 @@
   background-color: var(--color-dark-alt);
   border: var(--border);
   width: 250px;
-  display: flex;
-  flex-direction: column;
+  height: 500px;
+
 
   animation-name: showModalRight;
   animation-duration: 0.3s;
   animation-timing-function: ease-in;
   animation-fill-mode: forwards;
-
 }
 .modal__body {
   position: relative;
+  display: flex;
+  flex-direction: column;
   padding-inline: 15px;
+  height: 100%;
 }
 .modal__top {
   position: relative;
@@ -37,6 +39,7 @@
 .modal__main {
   padding-top: 16px;
   padding-bottom: 24px;
+  flex-shrink: 1;
 }
 
 .modal__footer {
@@ -44,9 +47,35 @@
   border-top: var(--border);
 }
 
+.modal__footer-actions {
+  position: absolute;
+  bottom: 0;
+  left: 21px;
+  right: 21px;
+  z-index: 1;
+  background-color: #262626;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-block: 20px;
+  padding-inline: 6px;
+  border-top: var(--border);
+}
+
+.modal__actions{
+  display: flex;
+  gap: 10px;
+}
+
 .modal__btn {
   width: 100%;
   padding-block: 11px;
+}
+
+.modal__actions-btn {
+  width: 100%;
+  padding-block: 8px;
 }
 
 @keyframes showModalRight {
